feat: add mark-done toggle for todos on the home page
